# data-science

./: .gitignore  README.md
statistics/bayes-bda-rethinking/: .gitignore  CHAPTERS_7_8_PLAN.md  CLAUDE.md  KNOWLEDGE_GRAPH_SETUP.md  README.md  TODO.md  bayesian_notes.md  main.py  pyproject.toml
statistics/bayes-bda-rethinking/.git-hooks/: README.md  install.sh  pre-commit.template
statistics/bayes-bda-rethinking/notebooks/: Bayesian_Foundations_Panda_Case_Study.ipynb  build_notebook.py  chapter2_bayesian_inference.ipynb  chapter2_bayesian_inference_updated.ipynb  chapter4_exercise.ipynb  log_transformations.ipynb  normal.ipynb  polynomial_regression.ipynb  sampling_exercise_1.ipynb  sequential_updates.ipynb  splines.ipynb  test.ipynb  univariate_gaussian.ipynb
statistics/bayes-bda-rethinking/notebooks/archive/: chapter2_bayesian_inference.ipynb
statistics/bayes-bda-rethinking/notebooks/chapter10/: glm_intro.ipynb
statistics/bayes-bda-rethinking/notebooks/chapter11/: binomial_poisson_advanced.ipynb  multinomial_categorical.ipynb  ucb_admissions.ipynb
statistics/bayes-bda-rethinking/notebooks/chapter13/: tadpoles_hierarchical.ipynb
statistics/bayes-bda-rethinking/src/: __init__.py  quap.py
statistics/bayesian-statistics/: README.md  Untitled.ipynb  binomial_conversion.ipynb  pyproject.toml
statistics/bayesian-statistics/notebooks/: 01_binomial_beta_distributions.ipynb  introduction_bayesian.ipynb
statistics/exploratory-data-analysis/: README.md  eda1.ipynb  eda_basics.ipynb  main.py  notes.md  penguin_eda.ipynb  pyproject.toml  requirements.txt
(+98 files in other folders)
