[project]
name = "bayesian_statistics"
version = "0.1.0"
description = "Exploring Bayesian statistics concepts"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pymc",
    "arviz",
    "jupyterlab",
    "ipykernel",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]